--- a/website/index.html
+++ b/website/index.html
@@ -1,39 +1,59 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-	<title>
-		Module 2 Assignment
-	</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution - Module 2</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body bgcolor="cyan">
-	<h1>
-		The Microsoft world
-		hello world
-	</h1>
-	<hr>
-	<div>
-		<section>
-		<p>
-			aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
-			bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb<br>
-			ccccccccccccccccccccccccccccccccccccccccc<br>
-		</p>	
-		</section>
 
-		<section>
-		<p>
-			aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
-			bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb<br>
-			ccccccccccccccccccccccccccccccccccccccccc<br>
-		</p>	
-		</section>
+<body>
+    <h1>
+    	<b>
+    		<i>
+    		The Billionaires
+    		</i>
+    	</b>
+    </h1>
+    <hr>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="jeff">
+                <h2>Jeff Bezos</h2>
+                <p>
+                    Jeff Bezos founded e-commerce colossus Amazon in 1994 out of his garage in Seattle. He runs it as CEO and owns an 11.1% stake.
+					Between March and April 2020, amid the pandemic, Amazon said it hired 175,000 additional workers.
+					In April 2020, Bezos said he would give $100 million to Feed America, a nonprofit that operates food banks and food pantries across the country.
+					Amazon has faced criticism from U.S. senators and the general public for its treatment of warehouse workers during the 	coronavirus pandemic.
 
-		<section>
-		<p>
-			aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
-			bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb<br>
-			ccccccccccccccccccccccccccccccccccccccccc<br>
-		</p>	
-		</section>
-	</div>
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="gates">
+                <h2>Bill Gates</h2>
+                <p>
+                   With his wife Melinda, Bill Gates chairs the Bill & Melinda Gates Foundation, the world's largest private charitable foundation.
+				   In May 2020, the Gates Foundation said it would spend $300 million to fight the coronavirus pandemic, funding treatment, detection and vaccines.
+				   Gates has sold or given away much of his stake in Microsoft -- he owns just over 1% of shares -- and invested in a mix of stocks and other assets.
+				   In mid-March 2020, Gates stepped down as a board member of Microsoft, the software firm he founded with Paul Allen (d. 2018) in 1975.
+				   To date, Gates has donated $35.8 billion worth of Microsoft stock to the Gates Foundation.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="bernard">
+                <h2>Bernard Arnault</h2>
+                <p>
+	                One of the world's ultimate taste-makers, Bernard Arnault oversees an empire of 70 brands including Louis Vuitton and Sephora.
+					In November 2019, LVMH struck a deal to buy American jeweler Tiffany & Co for $16.2 billion, believed to be the biggest luxury brand acquisition ever.
+					LVMH spent $3.2 billion in 2019 for luxury hospitality group, Belmond, which owns or manages 46 hotels, trains and river cruises.
+					Four of Arnault's five children work in corners of the LVMH empire: Frédéric, Delphine, Antoine and Alexandre.
+                </p>
+            </section>
+        </div>
+    </div>
 </body>
+
 </html>
