--- a/websitem4/index.html
+++ b/websitem4/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <h1>Module 4 Solution </h1>
-  <p><font size="16">Check the console to display the javascript outputs.....!<br>
-  	Esy way is to press <font color="red">ctrl+shift+i</font></font>
+  <p>Check the console to display the javascript outputs.....!<br>
+  	Esy way is to press <font color="red">ctrl+shift+i</font>
   </p>
 </body>
 </html>
